Added meme saving functionality

--- a/Cats/app/src/main/res/values/strings.xml
+++ b/Cats/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">meMeow</string>
     <string name="memetxt">Filler</string>
     <string name="img_id">2</string>
+    <string name="save">SAVE</string>
 </resources>
